--- a/style.css
+++ b/style.css
@@ -24,26 +24,27 @@ html {
 	scroll-behavior: smooth;
 	font-size: 16px;
 	color: var(--font-main-color);
-	font-family: 'Comfortaa', cursive;
 }
 body {
 	font-size: 1.25rem;
+	font-family: 'Comfortaa', cursive !important;
 }
 nav {
 	animation: cubic-bezier(0.645, 0.045, 0.355, 1)
 		fadein 4s;
 }
-section {
+.mlp-section {
 	min-height: var(--sectionHeight);
 	width: 100vw;
 	/*min-height: var(--sectionHeight);
     max-width: 100vw;*/
 	display: flex;
+	position: relative;
 	flex-flow: column nowrap;
 }
 a {
-	text-decoration: none;
-	color: var(--font-main-color);
+	text-decoration: none !important;
+	color: var(--font-main-color) !important;
 }
 ul {
 	list-style-type: none;
@@ -53,9 +54,16 @@ canvas {
 	z-index: var(--backgroundPosition);
 	image-rendering: pixelated;
 }
-img {
+
+.shadow-frame {
 	box-shadow: 3px 6px 6px rgba(59, 58, 57, 0.5);
 }
+
+.image img.side-image {
+	width: 300px;
+	margin: auto;
+}
+
 form {
 	display: flex;
 	flex-flow: column nowrap;
@@ -126,11 +134,22 @@ input[type='submit']:hover {
 	margin-inline-start: 20%;
 	margin-block-end: 40vh;
 }
+
 .ArtTherapie {
 	animation: fadein 2s ease-out;
 	font-size: calc(1rem + 5.2vw);
 	font-weight: 700;
 	color: #5c5c5c;
+}
+
+.mlp-title {
+	animation: fadein 2s ease-out;
+	font-size: calc(1rem + 5.2vw);
+	font-weight: 700;
+	color: #5c5c5c;
+	height: 100%;
+	margin-inline-start: 12%;
+	margin-block-start: 10%;
 }
 .Noms {
 	animation: fadein 3.25s ease-in;
@@ -182,6 +201,12 @@ input[type='submit']:hover {
 	margin-block-end: 2.5rem;
 }
 .Paragraph {
+	margin-block-end: 1.5rem; /*Intégrer les marges dans le calcul des hauteurs ??*/
+	margin-inline-start: 2vw;
+	line-height: 3rem;
+	backdrop-filter: blur(1px);
+}
+.mlp-paragraph {
 	margin-block-end: 1.5rem; /*Intégrer les marges dans le calcul des hauteurs ??*/
 	margin-inline-start: 2vw;
 	line-height: 3rem;
