--- a/style.css
+++ b/style.css
@@ -136,10 +136,23 @@ canvas {
 /* Virgile CSS OVER9K */
 
 
-.image-container {
-	/* height: 455px;
-	width: 519px; */
+.image-galerie {
 	object-fit: cover;
 	padding-right: 2%;
 	padding-left: 2%;
+}
+
+@media (max-width: 769px) {
+
+	.image-tile {
+		width: 100%;
+	}
+
+	.image-galerie {
+		height: 805px;
+		width: 100%;
+		padding-right: 0;
+		padding-left: 0;
+		margin-inline: 24px;
+	}
 }
