Add background color for readibilty

--- a/style.css
+++ b/style.css
@@ -127,6 +127,10 @@ canvas {
 	background-color: aliceblue;
 }
 
+.bg-white {
+	background-color: rgba(255, 255, 255, 0.446);
+}
+
 .galery-container{
 	max-width: 80%; /*!important;*/
 }
